# deepseek-cli

./: .gitignore  CLAUDE.md  CODINGBUDDY.md  Cargo.toml  GAPS.md  LICENSE  PLAN.md  PLANS.md  README.md  config.example.json  config.example.toml  deny.toml  missing.md  specs.md
.cargo/: audit.toml
crates/codingbuddy-agent/: Cargo.toml
crates/codingbuddy-agent/src/: agent_profiles.rs  analysis.rs  apply.rs  complexity.rs  gather_context.rs  lib.rs  local_routing.rs  prompts.rs  repo_map.rs  shared.rs  team.rs  tool_bridge.rs  tool_loop.rs  tool_surface.rs  verify.rs  watch.rs
crates/codingbuddy-agent/src/tool_loop/: agent_tools.rs  anti_hallucination.rs  compaction.rs  event_emission.rs  helpers.rs  mod.rs  phases.rs  safety.rs  tests.rs  types.rs
crates/codingbuddy-agent/tests/: analysis_bootstrap.rs  coding_quality_benchmark.rs  retrieval_wiring.rs  runtime_conformance.rs  team_orchestration.rs  tool_use_default.rs
crates/codingbuddy-chrome/: Cargo.toml
crates/codingbuddy-chrome/src/: lib.rs
crates/codingbuddy-cli/: Cargo.toml
crates/codingbuddy-cli/src/: context.rs  context_enhanced.rs  main.rs  output.rs  util.rs
crates/codingbuddy-cli/src/commands/: admin.rs  agents.rs  autocomplete_cmd.rs  autopilot.rs  background.rs  chat.rs  chat_lifecycle.rs  compact.rs  diff.rs  exec.rs  fork.rs  git.rs  mcp.rs  memory.rs  mod.rs  operator_diagnostics.rs  plan.rs  privacy.rs  replay.rs  revert.rs  review.rs  search.rs  serve.rs  session.rs  setup.rs  skills.rs  status.rs  tasks.rs
crates/codingbuddy-cli/tests/: cli_json.rs
crates/codingbuddy-context/: Cargo.toml  README.md
crates/codingbuddy-context/src/: lib.rs  tags.rs
crates/codingbuddy-errors/: Cargo.toml  README.md
crates/codingbuddy-errors/src/: lib.rs
crates/codingbuddy-jsonrpc/: Cargo.toml
crates/codingbuddy-jsonrpc/src/: lib.rs
crates/codingbuddy-llm/: Cargo.toml
crates/codingbuddy-llm/src/: lib.rs  provider_transform.rs
crates/codingbuddy-local-ml/: Cargo.toml
crates/codingbuddy-local-ml/src/: chunker.rs  completion.rs  embeddings.rs  hardware.rs  lib.rs  model_manager.rs  model_registry.rs  privacy.rs  retrieval.rs  speculative.rs  vector_index.rs
crates/codingbuddy-local-ml/src/completion/: candle_backend.rs  kv_cache.rs  runtime_scheduler.rs
crates/codingbuddy-local-ml/src/embeddings/: candle_backend.rs
crates/codingbuddy-local-ml/tests/: chunker_tests.rs  cli_integration.rs  eval_harness.rs  privacy_tests.rs  vector_retrieval_tests.rs
crates/codingbuddy-memory/: Cargo.toml
crates/codingbuddy-memory/src/: lib.rs
crates/codingbuddy-policy/: Cargo.toml
crates/codingbuddy-policy/src/: lib.rs  shell_parse.rs
crates/codingbuddy-skills/: Cargo.toml
crates/codingbuddy-skills/src/: lib.rs
crates/codingbuddy-store/: Cargo.toml
crates/codingbuddy-store/src/: lib.rs
crates/codingbuddy-subagent/: Cargo.toml
crates/codingbuddy-subagent/src/: lib.rs
crates/codingbuddy-testkit/: CODINGBUDDY.md  Cargo.toml
crates/codingbuddy-testkit/src/: lib.rs
crates/codingbuddy-tools/: Cargo.toml
crates/codingbuddy-tools/src/: catalog.rs  fuzzy_edit.rs  host.rs  lib.rs  plugins.rs  shell.rs  tests.rs  tool_tiers.rs  utils.rs  validation.rs
crates/codingbuddy-ui/: Cargo.toml
crates/codingbuddy-ui/src/: input.rs  keybindings.rs  lib.rs  panels.rs  rendering.rs  slash_commands.rs  state.rs  statusline.rs  stream_runtime.rs  tests.rs  theme.rs
crates/deepseek-agent/: Cargo.toml
crates/deepseek-agent/src/: agent_profiles.rs  analysis.rs  apply.rs  architect.rs  complexity.rs  consultation.rs  editor.rs  gather_context.rs  intent.rs  lib.rs  linter.rs  local_routing.rs  loop.rs  mode_router.rs  observation.rs  plan_discipline.rs  prompts.rs  protocol.rs  r1_drive.rs  repo_map.rs  repo_map_v2.rs  run_engine.rs  shared.rs  team.rs  tool_bridge.rs  tool_loop.rs  v3_patch.rs  verify.rs  watch.rs
crates/deepseek-agent/src/chat/: history.rs  mod.rs  orchestrator.rs  references.rs  state.rs
crates/deepseek-agent/src/engine/: events.rs  lifecycle.rs  mod.rs
crates/deepseek-agent/src/mcp_runtime/: discovery.rs  execution.rs  mod.rs  resources.rs
crates/deepseek-agent/src/planner/: generation.rs  memory.rs  mod.rs  parsing.rs  quality.rs  step_tools.rs
crates/deepseek-agent/src/runtime/: cache.rs  mod.rs  prompt.rs  verification.rs
crates/deepseek-agent/src/subagents_runtime/: arbitration.rs  delegated.rs  lanes.rs  memory.rs  mod.rs  orchestration.rs
crates/deepseek-agent/src/tools_runtime/: agent_tools.rs  approvals.rs  background.rs  checkpoints.rs  dispatcher.rs  mod.rs  output.rs
crates/deepseek-agent/tests/: aider_parity.rs  analysis_bootstrap.rs  architect_editor_loop.rs  retrieval_wiring.rs  runtime_conformance.rs  team_orchestration.rs  tool_use_default.rs
crates/deepseek-cli/: Cargo.toml
crates/deepseek-cli/src/: context.rs  context_enhanced.rs  main.rs  md_render.rs  output.rs  util.rs
crates/deepseek-cli/tests/: cli_json.rs
crates/deepseek-context/: Cargo.toml  README.md
crates/deepseek-context/src/: lib.rs  tags.rs
crates/deepseek-core/: Cargo.toml
crates/deepseek-core/src/: lib.rs
crates/deepseek-diff/: Cargo.toml
crates/deepseek-diff/src/: lib.rs
crates/deepseek-errors/: Cargo.toml  README.md
crates/deepseek-errors/src/: lib.rs
crates/deepseek-index/: Cargo.toml
crates/deepseek-index/src/: lib.rs
crates/deepseek-jsonrpc/: Cargo.toml
crates/deepseek-jsonrpc/src/: lib.rs
crates/deepseek-local-ml/: Cargo.toml
crates/deepseek-local-ml/src/: chunker.rs  completion.rs  lib.rs  model_manager.rs  model_registry.rs  privacy.rs  reranker.rs  retrieval.rs  speculative.rs  vector_index.rs
crates/deepseek-local-ml/tests/: chunker_tests.rs  cli_integration.rs  eval_harness.rs  privacy_tests.rs  vector_retrieval_tests.rs
crates/deepseek-mcp/: Cargo.toml
crates/deepseek-mcp/src/: lib.rs
crates/deepseek-memory/: Cargo.toml
crates/deepseek-memory/src/: lib.rs
crates/deepseek-policy/: Cargo.toml
crates/deepseek-policy/src/: lib.rs  output_scanner.rs
crates/deepseek-skills/: Cargo.toml
crates/deepseek-skills/src/: lib.rs
(+153 files in other folders)
