[workspace]
members = [
  "crates/deepseek-cli",
  "crates/deepseek-core",
  "crates/deepseek-agent",
  "crates/deepseek-llm",
  "crates/deepseek-router",
  "crates/deepseek-tools",
  "crates/deepseek-diff",
  "crates/deepseek-index",
  "crates/deepseek-store",
  "crates/deepseek-policy",
  "crates/deepseek-observe",
  "crates/deepseek-testkit",
  "crates/deepseek-ui",
  "crates/deepseek-memory",
  "crates/deepseek-mcp",
  "crates/deepseek-subagent",
  "crates/deepseek-skills",
  "crates/deepseek-hooks",
  "crates/deepseek-jsonrpc",
  "crates/deepseek-chrome",
  "crates/deepseek-context",
  "crates/deepseek-errors",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT"
version = "0.2.0"
authors = ["DeepSeek CLI Contributors"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
regex = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tantivy = "0.25.0"
toml = "1.0.2"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }
walkdir = "2"
unicode-width = "0.2"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"
signal-hook = "0.3"
notify = "8"
glob = "0.3"
ignore = "0.4"
rpassword = "7"
clap_complete = "4"
base64 = "0.22"
pdf-extract = "0.7"
tempfile = "3"
petgraph = "0.6"
indexmap = "2"
rayon = "1"
