[workspace]
members = [
  "crates/codingbuddy-cli",
  "crates/codingbuddy-core",
  "crates/codingbuddy-agent",
  "crates/codingbuddy-llm",
  "crates/codingbuddy-tools",
  "crates/codingbuddy-diff",
  "crates/codingbuddy-index",
  "crates/codingbuddy-store",
  "crates/codingbuddy-policy",
  "crates/codingbuddy-observe",
  "crates/codingbuddy-testkit",
  "crates/codingbuddy-ui",
  "crates/codingbuddy-memory",
  "crates/codingbuddy-mcp",
  "crates/codingbuddy-subagent",
  "crates/codingbuddy-skills",
  "crates/codingbuddy-hooks",
  "crates/codingbuddy-jsonrpc",
  "crates/codingbuddy-chrome",
  "crates/codingbuddy-context",
  "crates/codingbuddy-errors",
  "crates/codingbuddy-local-ml",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.93"
license-file = "LICENSE"
license = "MIT"
version = "0.6.0"
authors = ["CodingBuddy Contributors"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
regex = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tantivy = "0.25.0"
toml = "1.0.2"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }
walkdir = "2"
unicode-width = "0.2"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"
signal-hook = "0.3"
notify = "8"
glob = "0.3"
ignore = "0.4"
rpassword = "7"
clap_complete = "4"
base64 = "0.22"
pdf-extract = "0.7"
tempfile = "3"
petgraph = "0.6"
indexmap = "2"
libc = "0.2"
rayon = "1"
scraper = "0.22"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tree-sitter = "0.25"
tree-sitter-bash = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-haskell = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-zig = "1.1"
jsonschema = "0.27"
shell-words = "1.1"
strsim = "0.11"