[package]
name = "codingbuddy-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
ignore.workspace = true
codingbuddy-core = { path = "../codingbuddy-core" }
codingbuddy-llm = { path = "../codingbuddy-llm" }
codingbuddy-observe = { path = "../codingbuddy-observe" }
codingbuddy-policy = { path = "../codingbuddy-policy" }
codingbuddy-store = { path = "../codingbuddy-store" }
codingbuddy-tools = { path = "../codingbuddy-tools" }
codingbuddy-subagent = { path = "../codingbuddy-subagent" }
codingbuddy-hooks = { path = "../codingbuddy-hooks" }
codingbuddy-mcp = { path = "../codingbuddy-mcp" }
codingbuddy-skills = { path = "../codingbuddy-skills" }
codingbuddy-diff = { path = "../codingbuddy-diff" }
codingbuddy-memory = { path = "../codingbuddy-memory" }
codingbuddy-context = { path = "../codingbuddy-context" }
codingbuddy-index = { path = "../codingbuddy-index" }
codingbuddy-local-ml = { path = "../codingbuddy-local-ml" }
reqwest.workspace = true
base64.workspace = true
chrono.workspace = true
regex.workspace = true
notify.workspace = true
strsim.workspace = true

[features]
local-ml = ["codingbuddy-local-ml/local-ml"]

[dev-dependencies]
tempfile.workspace = true
codingbuddy-testkit = { path = "../codingbuddy-testkit" }
