[package]
name = "codingbuddy-chrome"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
base64 = "0.22"
tungstenite = "0.24"

[dev-dependencies]
uuid.workspace = true
