[package]
name = "codingbuddy-context"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Smart context management for CodingBuddy"
readme = "README.md"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
walkdir.workspace = true
regex.workspace = true
ignore.workspace = true
petgraph = { workspace = true, features = ["serde-1"] }
indexmap.workspace = true
rayon.workspace = true
rusqlite.workspace = true
streaming-iterator = "0.1"
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-haskell.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-zig.workspace = true

[dev-dependencies]
tempfile.workspace = true
