[package]
name = "codingbuddy-errors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Enhanced error handling and user guidance for CodingBuddy"
readme = "README.md"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true