[package]
name = "codingbuddy-jsonrpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sha2.workspace = true
codingbuddy-core = { path = "../codingbuddy-core" }
codingbuddy-store = { path = "../codingbuddy-store" }
codingbuddy-context = { path = "../codingbuddy-context" }
codingbuddy-errors = { path = "../codingbuddy-errors" }
codingbuddy-agent = { path = "../codingbuddy-agent" }

[dev-dependencies]
tempfile = "3"
