[package]
name = "codingbuddy-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
glob.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
codingbuddy-core = { path = "../codingbuddy-core" }

[dev-dependencies]
proptest = "1"
