[package]
name = "codingbuddy-subagent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
codingbuddy-policy = { path = "../codingbuddy-policy" }

[dev-dependencies]
tempfile.workspace = true
