[package]
name = "codingbuddy-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
walkdir.workspace = true
regex.workspace = true
glob.workspace = true
ignore.workspace = true
uuid.workspace = true
wait-timeout = "0.2"
codingbuddy-core = { path = "../codingbuddy-core" }
codingbuddy-diff = { path = "../codingbuddy-diff" }
codingbuddy-index = { path = "../codingbuddy-index" }
codingbuddy-policy = { path = "../codingbuddy-policy" }
codingbuddy-store = { path = "../codingbuddy-store" }
codingbuddy-hooks = { path = "../codingbuddy-hooks" }
jsonschema.workspace = true
codingbuddy-memory = { path = "../codingbuddy-memory" }
codingbuddy-chrome = { path = "../codingbuddy-chrome" }
base64.workspace = true
pdf-extract.workspace = true
scraper.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
