[package]
name = "codingbuddy-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true
signal-hook.workspace = true
base64.workspace = true
syntect.workspace = true
codingbuddy-core = { path = "../codingbuddy-core" }
codingbuddy-store = { path = "../codingbuddy-store" }

[dev-dependencies]
uuid = { workspace = true }
