[package]
name = "deepseek-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
ignore.workspace = true
sha2.workspace = true
deepseek-core = { path = "../deepseek-core" }
deepseek-llm = { path = "../deepseek-llm" }
deepseek-observe = { path = "../deepseek-observe" }
deepseek-policy = { path = "../deepseek-policy" }
deepseek-router = { path = "../deepseek-router" }
deepseek-store = { path = "../deepseek-store" }
deepseek-tools = { path = "../deepseek-tools" }
deepseek-subagent = { path = "../deepseek-subagent" }
deepseek-memory = { path = "../deepseek-memory" }
deepseek-skills = { path = "../deepseek-skills" }
deepseek-hooks = { path = "../deepseek-hooks" }
deepseek-mcp = { path = "../deepseek-mcp" }
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
deepseek-testkit = { path = "../deepseek-testkit" }
