[package]
name = "deepseek-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
ignore.workspace = true
deepseek-core = { path = "../deepseek-core" }
deepseek-llm = { path = "../deepseek-llm" }
deepseek-observe = { path = "../deepseek-observe" }
deepseek-policy = { path = "../deepseek-policy" }
deepseek-store = { path = "../deepseek-store" }
deepseek-tools = { path = "../deepseek-tools" }
deepseek-subagent = { path = "../deepseek-subagent" }
deepseek-hooks = { path = "../deepseek-hooks" }
deepseek-mcp = { path = "../deepseek-mcp" }
deepseek-diff = { path = "../deepseek-diff" }
reqwest.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
deepseek-testkit = { path = "../deepseek-testkit" }
