[package]
name = "deepseek-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "deepseek"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rpassword.workspace = true
sha2.workspace = true
reqwest.workspace = true
glob.workspace = true
regex.workspace = true
crossterm.workspace = true
base64.workspace = true
termimad = "0.30"
deepseek-agent = { path = "../deepseek-agent" }
deepseek-core = { path = "../deepseek-core" }
deepseek-diff = { path = "../deepseek-diff" }
deepseek-index = { path = "../deepseek-index" }
deepseek-policy = { path = "../deepseek-policy" }
deepseek-store = { path = "../deepseek-store" }
deepseek-tools = { path = "../deepseek-tools" }
deepseek-ui = { path = "../deepseek-ui" }
deepseek-memory = { path = "../deepseek-memory" }
deepseek-mcp = { path = "../deepseek-mcp" }
deepseek-skills = { path = "../deepseek-skills" }
deepseek-subagent = { path = "../deepseek-subagent" }
deepseek-jsonrpc = { path = "../deepseek-jsonrpc" }
deepseek-context = { path = "../deepseek-context" }
deepseek-errors = { path = "../deepseek-errors" }
deepseek-chrome = { path = "../deepseek-chrome" }
deepseek-local-ml = { path = "../deepseek-local-ml" }
ignore.workspace = true

[features]
local-ml = ["deepseek-agent/local-ml", "deepseek-local-ml/local-ml"]

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
