[package]
name = "deepseek-context"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Smart context management for DeepSeek CLI"
readme = "README.md"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
walkdir.workspace = true
regex.workspace = true
ignore.workspace = true
petgraph = { workspace = true, features = ["serde-1"] }
indexmap.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile.workspace = true