[package]
name = "deepseek-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tantivy.workspace = true
walkdir.workspace = true
uuid.workspace = true
deepseek-core = { path = "../deepseek-core" }
