[package]
name = "deepseek-jsonrpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
deepseek-core = { path = "../deepseek-core" }
deepseek-store = { path = "../deepseek-store" }

[dev-dependencies]
tempfile = "3"
