[package]
name = "deepseek-jsonrpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sha2.workspace = true
deepseek-core = { path = "../deepseek-core" }
deepseek-store = { path = "../deepseek-store" }
deepseek-context = { path = "../deepseek-context" }
deepseek-errors = { path = "../deepseek-errors" }
deepseek-agent = { path = "../deepseek-agent" }

[dev-dependencies]
tempfile = "3"
