[package]
name = "deepseek-local-ml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
local-ml = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub", "usearch"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
rusqlite.workspace = true
ignore.workspace = true
regex.workspace = true
rayon.workspace = true
glob.workspace = true
deepseek-core = { path = "../deepseek-core" }
deepseek-index = { path = "../deepseek-index" }

# Feature-gated ML dependencies
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["fancy-regex"] }
hf-hub = { version = "0.4", optional = true }
usearch = { version = "2.21", optional = true }

[dev-dependencies]
tempfile.workspace = true
