[package]
name = "deepseek-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
walkdir.workspace = true
sha2.workspace = true
deepseek-core = { path = "../deepseek-core" }
deepseek-store = { path = "../deepseek-store" }

[dev-dependencies]
rusqlite = { workspace = true }
tempfile = "3"
