[package]
name = "deepseek-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
glob.workspace = true
deepseek-core = { path = "../deepseek-core" }

[dev-dependencies]
proptest = "1"
