[package]
name = "deepseek-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
glob.workspace = true
uuid.workspace = true
deepseek-core = { path = "../deepseek-core" }
deepseek-store = { path = "../deepseek-store" }
